objects/Scoring_Rule_Fields__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldComparison__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Field Comparison</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldScore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Field as Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Field_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Equals</fullName>
                </value>
                <value>
                    <fullName>Not equals</fullName>
                </value>
                <value>
                    <fullName>Contains</fullName>
                </value>
                <value>
                    <fullName>Does not contain</fullName>
                </value>
                <value>
                    <fullName>Starts with</fullName>
                </value>
                <value>
                    <fullName>Ends with</fullName>
                </value>
                <value>
                    <fullName>Regular Expression</fullName>
                </value>
                <value>
                    <fullName>Greater than</fullName>
                </value>
                <value>
                    <fullName>Greater than or equal</fullName>
                </value>
                <value>
                    <fullName>Less than</fullName>
                </value>
                <value>
                    <fullName>Less than or equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scoring_Rules__c</fullName>
        <label>Scoring Rules</label>
        <referenceTo>Scoring_Rules__c</referenceTo>
        <relationshipLabel>Scoring Rule Fields</relationshipLabel>
        <relationshipName>Scoring_Rule_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Field_Type__c</columns>
        <columns>FieldComparison__c</columns>
        <columns>Operator__c</columns>
        <columns>Score__c</columns>
        <columns>Scoring_Rules__c</columns>
        <columns>FieldScore__c</columns>
        <columns>Field_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>